CICO-3997 fixed the issue with overflow rate names in topbar

--- a/rover/css/rate-manager.less
+++ b/rover/css/rate-manager.less
@@ -122,6 +122,9 @@
         float: left;
         font-size: 14px;
         line-height: normal;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
         h6 {
           color: #9D9D9D;
           min-width: 200px;
